--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Gouthami Edamalapati
+title: Gowthami Edamalapati
 description: Notes, projects, and experiments with AI/ML and engineering.
 theme: minima
-author: Gouthami Edamalapati
+author: Gowthami Edamalapati
 minima:
   social_links:
     - platform: github
-      user_url: https://github.com/gouthami-edamalapati
+      user_url: https://github.com/gowthami-edamalapati
 # Optional: show posts on homepage
 show_excerpts: true
